--- a/monitor/src/Restaurants/RestaurantCard.css
+++ b/monitor/src/Restaurants/RestaurantCard.css
@@ -1,5 +1,5 @@
 .customed-card {
-    margin-top: 3rem;
+    margin-top: 0;
     border-radius: 30px;
     overflow: hidden;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.08);
