update: Drones Managements and Cancel-order logic

--- a/monitor/src/Orders/Orders_page.css
+++ b/monitor/src/Orders/Orders_page.css
@@ -34,3 +34,8 @@
     color: rgb(0, 187, 12);
     border-bottom: 3px solid rgb(0, 187, 12);
 }
+
+.orders-filter .btn#cancelled.active, .orders-filter .btn#Cancelled:hover {
+    color: rgb(255, 59, 48);
+    border-bottom: 3px solid rgb(255, 59, 48);;
+}
