--- a/monitor/src/components/OrderCard/OrderCard.css
+++ b/monitor/src/components/OrderCard/OrderCard.css
@@ -32,6 +32,9 @@
 .order-card.completed {
     border-left: 5px solid rgb(0, 187, 12);
 }
+.order-card.cancelled {
+    border-left: 5px solid rgb(255, 59, 48);   /* Đỏ tươi */
+}
 
 
 .pending-btn {
@@ -47,4 +50,9 @@
 .delivering-btn {
     background-color: rgb(70, 133, 231); /*rgb(0, 75, 187)*/
     border: 1px solid rgb(70, 133, 231);
+}
+
+.cancel-btn {
+    background-color: rgb(255, 59, 48);
+    border: 1px solid rgb(255, 59, 48);
 }
